<resources>
    <string name="app_name">FluffyFriend</string>
    <string name="hayvanBaslik">Cat</string>
    <string name="mamaYazi">Food</string>
    <string name="kafesYazi">Cage</string>
    <string name="ilacYazi">Medicine</string>
    <string name="kumYazi">Litter</string>
    <string name="hayvanYas">2</string>
    <string name="yasBaslik">Age</string>
    <string name="aciklama">Complete your kitten needs or adopt!</string>
    <string name="butonYazi">Add Donation</string>
    <string name="butonYazi2">Adopt</string>
    <string name="fluffy_friend">Fluffy Friend</string>
</resources>